# Rust-Torrent-Client

./: Cargo.toml  README.md
src/: config.rs  coordinator.rs  core_models.rs  data_collector.rs  dependency_provider.rs  download_assembler.rs  file_provider.rs  internal_events.rs  lib.rs  main.rs  messages.rs  metadata.rs  mocks.rs  p2p.rs  p2p_conn.rs  parser.rs  piece_picker.rs  state.rs  torrent_parser.rs  tracker.rs
src/choke/: handler.rs  state.rs  task.rs
src/coordinator/: ipc.rs  task.rs
src/core_models/: entities.rs  events.rs  internal_events.rs
src/data_collector/: handler.rs  runner.rs  state.rs
src/p2p/: conn.rs  connection.rs  handlers.rs  state.rs  task.rs  transfer.rs
src/torrent_parser/: bencode.rs  file_reader.rs  metadata.rs
src/tracker/: client.rs  task.rs
src/transfer/: coordinator.rs  peer_connection.rs  peer_message.rs  peer_transfer.rs  piece_picker.rs  state.rs
test_resources/: debian-12.0.0-amd64-netinst.iso.torrent
tests/: data_collection_test.rs  data_collector_test.rs
