[package]
name = "rust-torrent-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.2.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha1 = "0.10.5"
tokio = { version = "1.29.0", features = ["full"] }
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
async-trait = "0.1.73"
tempfile = "3.8.0"
mockall = "0.11.4"

